src/objects/PI_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Auditor__c</fullName>
        <label>Auditor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditors_Comments_on_Assessment__c</fullName>
        <label>Auditors Comments on Assessment</label>
        <length>100768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Assessment__c</fullName>
        <label>Date of Last Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Assessment__c</fullName>
        <label>Date of Next Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <controllingField>Reason_For_Audit__c</controllingField>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_test_time__c</fullName>
        <label>Next test time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Audit__c</fullName>
        <label>Reason For Audit</label>
        <picklist>
            <picklistValues>
                <fullName>Periodic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk/Control variation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PI Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>